# markdown_website

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_install.cmake  cppcheck-ignore.txt
Resources/: template.html
Resources/pages/: audio_dsp_on_arduino.md  building_a_markdown_site.md  building_and_deploying_a_markdown_site.md  home.md  not_found.md
Resources/public/: style.css
deployment/: nginx_block.conf  server.service
src/: Defines.h  main.cpp
